CKAD-exercises/services-and-networking/check-svc-pod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: tmp
  name: tmp
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - wget
    - 10.244.205.199:80
    image: busybox
    imagePullPolicy: IfNotPresent
    name: tmp
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
